# SHDisplay

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  EnvironmentMap.cpp  EnvironmentMap.h  ObjLoader.cpp  ObjLoader.h  Primitive.h  README.md  Renderer.cpp  Renderer.h  SHDisplay.cpp  Scene.cpp  Scene.h  Shader.h  TriangleMesh.cpp  TriangleMesh.h
resources/prt/CornellBox/: PRT.txt
resources/prt/GraceCathedral/: PRT.txt  transport.txt
resources/prt/Indoor/: PRT.txt  transport.txt
resources/prt/Park/: PRT.txt
resources/prt/PondNight/: PRT.txt
resources/prt/SkyBox/: PRT.txt
resources/prt/TestBox/: PRT.txt
resources/prt/TestBox2/: PRT.txt
resources/prt/Yokohama/: PRT.txt
resources/scenes/: bunny.prt  cube.prt  gd32.prt  gd5k.prt  spot.prt
resources/shaders/: PRT.frag  PRT.vs  phong.frag  phong.vs  skybox.frag  skybox.vs
